Minor fixes - Increased VM Count to 200 - Aligned Search Icon before refresh icon

--- a/webroot/css/contrail.custom.css
+++ b/webroot/css/contrail.custom.css
@@ -2064,7 +2064,7 @@ p.error, p.error-text {
 .graph-search-control-panel-expanded-container {
     right: 33px;
     width: 200px;
-    top: 101px;
+    top: 167px;
     height: 29px;
 }
 .graph-control-panel-search-dropdown {
